--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "daisyui": "^5.1.7",
     "next": "15.5.2",
     "react": "19.1.0",
