--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
     "next": "15.5.2",
+    "next-video": "^2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
