--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.17",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
