--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ next-env.d.ts
 /app/generated/prisma
 
 /app/generated/prisma
+
+/app/generated/prisma
+
+/app/generated/prisma
+
+/app/generated/prisma
