--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
     "bcryptjs": "^3.0.2",
-    "better-auth": "^1.3.23",
+    "better-auth": "^1.3.24",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
@@ -21,8 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "swr": "^2.3.6",
-    "zod": "^4.1.5"
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,7 +32,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.16.2",
+    "prisma": "^6.16.3",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5"
