--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.24",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.544.0",
     "next": "15.5.2",
     "next-video": "^2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,6 +38,7 @@
     "prisma": "^6.16.3",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
