--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@react-email/render": "^1.3.1",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.24",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.1.2",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
