--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.16.3",
+    "@next/swc-linux-x64-gnu": "^16.1.6",
+    "@prisma/client": "^6.19.2",
     "@prisma/extension-accelerate": "^2.0.2",
     "@react-email/render": "^1.3.1",
     "bcryptjs": "^3.0.2",
@@ -20,7 +22,7 @@
     "daisyui": "^5.1.7",
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.9",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "next-video": "^0.0.1",
     "react": "19.1.0",
